# memory_manager

./: .gitignore  CMakeLists.txt  README.md
include/: memory_manager.h
src/: avl_tree.c  avl_tree.h  blocks.c  blocks.h  heap.c  heap.h  memory_manager.c
tests/: test_memory_manager.cpp
